# tether

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.leashd/: .gitignore
.tether/: .gitignore
docs/: agents.md  architecture.md  browser-testing.md  configuration.md  connectors.md  engine.md  events.md  index.md  interactions.md  middleware.md  plugins.md  policies.md  safety-pipeline.md  storage.md  testing-setup.md
leashd/: __init__.py  __main__.py  app.py  exceptions.py  main.py
leashd/agents/: base.py  claude_code.py
leashd/connectors/: telegram.py
leashd/core/: config.py  engine.py  events.py  interactions.py  session.py  workspace.py
leashd/core/safety/: approvals.py  audit.py  gatekeeper.py  policy.py
leashd/git/: formatter.py  handler.py  service.py
leashd/middleware/: auth.py  base.py  rate_limit.py
leashd/plugins/: base.py  registry.py
leashd/plugins/builtin/: audit_plugin.py  browser_tools.py  merge_resolver.py  test_config_loader.py  test_runner.py
leashd/policies/: default.yaml  dev-tools.yaml
leashd/storage/: base.py  memory.py  sqlite.py
tests/: conftest.py  test_analyzer.py  test_app.py  test_approvals.py  test_browser_tools.py  test_claude_agent.py  test_config.py  test_engine.py  test_gatekeeper.py  test_git_formatter.py  test_git_handler.py  test_git_models.py  test_git_service.py  test_interactions.py  test_main.py  test_merge.py  test_middleware.py  test_plugins.py  test_policy.py  test_sandbox.py  test_storage.py  test_streaming.py  test_telegram_connector.py  test_test_runner_plugin.py
tests/agents/: test_claude_agent.py
tests/connectors/: test_telegram.py
tests/core/: test_config.py  test_events.py  test_interactions.py  test_streaming.py  test_workspace.py
tests/core/engine/: conftest.py  test_clear_race.py  test_commands.py  test_events_lifecycle.py  test_interaction_routing.py  test_message_handling.py  test_plan_mode.py  test_queuing.py  test_safety.py  test_sessions.py  test_stream_responder.py  test_workspace_commands.py
tests/core/safety/: test_analyzer.py  test_approvals.py  test_gatekeeper.py  test_policy.py  test_sandbox.py
tests/git/: test_formatter.py  test_handler.py  test_models.py  test_service.py
tests/middleware/: test_middleware.py
tests/plugins/: test_registry.py
tests/plugins/builtin/: test_audit_plugin.py  test_browser_tools.py  test_merge_resolver.py  test_test_config_loader.py  test_test_runner.py
tests/storage/: test_storage.py
tether/: __init__.py  __main__.py  app.py  exceptions.py  main.py
tether/agents/: base.py  claude_code.py
tether/connectors/: base.py  telegram.py
tether/core/: config.py  engine.py  events.py  interactions.py  session.py  workspace.py
tether/core/safety/: analyzer.py  approvals.py  audit.py  gatekeeper.py  policy.py  sandbox.py
tether/git/: formatter.py  handler.py  models.py  service.py
tether/middleware/: auth.py  rate_limit.py
tether/plugins/: base.py  registry.py
tether/plugins/builtin/: audit_plugin.py  browser_tools.py  merge_resolver.py  test_config_loader.py  test_runner.py
tether/policies/: default.yaml  permissive.yaml  strict.yaml
tether/storage/: base.py  memory.py  sqlite.py
